--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21",
+        "vue-qrcode-reader": "^5.7.3"
     }
 }
