--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
     "require": {
         "php": "^8.2",
         "barryvdh/laravel-dompdf": "^3.1",
+        "endroid/qr-code": "^5.0",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "livewire/livewire": "^3.6",
         "simplesoftwareio/simple-qrcode": "*",
         "tightenco/ziggy": "^2.0"
     },
@@ -30,7 +32,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+    "app/Helpers/DataPreparationHelper.php"
+]
     },
     "autoload-dev": {
         "psr-4": {
@@ -76,6 +81,7 @@
             "php-http/discovery": true
         }
     },
+    
     "minimum-stability": "stable",
     "prefer-stable": true
 }
